--- a/indexx.html
+++ b/indexx.html
@@ -4,38 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <title>Frontend Mentor | Base Apparel coming soon page</title>
+  <!-- bootstrap cdn -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <!-- favicon link -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-  <!-- font awesome -->
-  <script src="https://use.fontawesome.com/a626b607a6.js"></script>
   <!-- custom css -->
-  <link rel="stylesheet" href="styless.css">
-</head>
+  <link rel="stylesheet" href="styles.css">
+
 
 <body>
-  <section class="left">
-    <div class="container">
-      <nav>
-          <div class="brand"><img src="./images/logo.svg" alt="base apparel logo"></div>
-      </nav>
-      <main>
-          <h1 class="heading"><span class="head">We're</span> coming soon</h1>
-          <p class="paragraph">Hello fellow shoppers, we're currently building our new fashion store. Add your email below to stay up-to-date with announcements and our launch deals</p>
-          <form action="">
-              <div class="input-class">
-                <input type="email" name="email" id="" placeholder="Email Address">
-                <div class="btn"><i class="fa fa-angle-right fa-3x"></i></div>
-              </div>
-          </form>
-      </main>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-7">
+        <nav class="navbar">
+          <a href="#" class="navbar-brand">
+            <img src="images/logo.svg" alt="">
+          </a>
+        </nav>
+        <div class="content">
+          <h1 class="big-heading"><span>We're</span> coming soon.</h1>
+          <p>Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up to date  with announcements and launch date</p>
+          <div class="waitlist-signup">
+            <input type="text" class="" placeholder="Email Address" aria-label="Email Address" aria-describedby="addon-wrapping">
+            <span class="waitlist-sign" id="addon-wrapping">></span>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-5">
+        <img src="images/hero-desktop.jpg" alt="hero image">
+      </div>
     </div>
-  </section>  
-  <section class="right">
-      <img src="./images/hero-desktop.jpg" alt="hero-desktop">
-  </section>
+  </div>
+  
 </body>
 </html>
