--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- font awesome -->
   <script src="https://use.fontawesome.com/a626b607a6.js"></script>
   <!-- custom css -->
-  <link rel="stylesheet" href="styless.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
